* Finished Hypergraph merging section draft * Started HypergraphFromState section

--- a/Conditional.tex
+++ b/Conditional.tex
@@ -1,5 +1,6 @@
 \documentclass[Master.tex]{subfiles}
 \begin{document}
+\newcommand{\master}{.}
 
 \section{What is condition effects}
     \subfile{Conditional/WhatIsConditionalEffects}
