--- a/Conditional/DifficulitiesLearningConditionEffects.tex
+++ b/Conditional/DifficulitiesLearningConditionEffects.tex
@@ -86,7 +86,7 @@ Thus if both negative and positive preconditions are allowed a the same time use
 
 \begin{figure}
 	\centering
-	\includegraphics[width=0.2\textwidth]{../Graphics/soko_cond_example.png}
+	\includegraphics[width=0.2\textwidth]{\master/Graphics/soko_cond_example.png}
 
 	\caption{\label{fig:ca:sokoban-moveleft-action}\texttt{MoveLeft} action being used in a sokoban world for Example~\ref{ex:ca:sokoban-moveleft-action} }
 
@@ -355,13 +355,5 @@ lamp was created since it was present already.
 Interestingly like with non-conditional preconditions we require failed actions to determine the actual preconditions but unlike non-conditional preconditions an action can both succeed and fail in the same step. For instance the light was successfully turned on for the lamp but it was unsuccessful in turning on the light for the sofa.
 
 \end{example}
-
-
-
-
-
-
-
-
 
 \end{document}
