--- a/NonConditional/HypothesisConstruction.tex
+++ b/NonConditional/HypothesisConstruction.tex
@@ -7,7 +7,7 @@
 	The design of the hypothesis determines the strategy of an agent, which impacts what it is capable of learning in the future.
 	For instance if the hypothesis is based mostly on proven knowledge, the agent will never experience an unfamiliar situation and thus will never learn something new.
 
-	In Chapter \ref{sec:Learning} we went through examples of different strategies in this section we will show how that can be put to practice for STRIPS-style action schema, and what it means to the action schema itself.
+	In Chapter~\ref{sec:Learning} we went through examples of different strategies in this section we will show how that can be put to practice for STRIPS-style action schema, and what it means to the action schema itself.
 	Furthermore, this section will also show the dichotomy between using unproven preconditions and unproven effects and how to manipulate the traits of a given strategy by changing these.
 
 	The knowledge we can construct these hypothetical action schemas from are the following: 
@@ -71,7 +71,7 @@
 
 \subsubsection{Strategy: Pessimistic}
 
-	A pessimistic strategy as we defined in \ref{sec:Learning} has the traits always \texttt{Exploitative} and always \texttt{Help-seeking},
+	A pessimistic strategy as we defined in~\ref{sec:Learning} has the traits always \texttt{Exploitative} and always \texttt{Help-seeking},
 	meaning the hypothetical action schema should never make F-PPMs and claim "no plan" if it cannot guarantee the solution.
 
 	In \cite{Walsh2008} they suggest the following for a pessimistic learning strategy
