--- a/Learning.tex
+++ b/Learning.tex
@@ -7,9 +7,8 @@
 \section{Algorithm}
     \subfile{Learning/Algorithm}
 
-\section{Strategy examples}
-
 \section{PDDL}
+<TODO: Explain how a world can be modeled as predicates (PDDL)>
 
 \section{Sokoban in PDDL}
     \subfile{Learning/SokobanPDDL}
