Moved collapsing section to its own file, added todos

--- a/Conditional.tex
+++ b/Conditional.tex
@@ -16,6 +16,9 @@
 \section{Hyper graph merging algorithm}
 	\subfile{Conditional/HyperGraphMergingAlgorithm}
 
+\section{Collapsing hypergraphs}
+	\subfile{Conditional/CollapsingHypergraphs}
+
 \section{Hypothesis construction}
 	% \subfile{Conditional/HypothesisConstruction}
 
