--- a/NonConditional.tex
+++ b/NonConditional.tex
@@ -1,8 +1,7 @@
 \documentclass[Master.tex]{subfiles}
 \begin{document}
 
-\section{Sokoban example} \label{sec:nc:sokobanExample}
-    \subfile{NonConditional/SokobanExample}
+<TODO: Introduction, explaining what non-conditional learning is about and what the structure of the section will be>
 
 \section{Learning effects}
     \subfile{NonConditional/Effects}
